coding out, started JS

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <header class="container jumbotron bg-dark">
         <h1 class="text-center font-weight-bold text-light">Crystal Collector</h1>
     </header>
+    <br>
+    <br>
     <div class="row">
         <ul class="container bg-dark">
             <li>
@@ -46,19 +48,43 @@
             </li>
         </ul>
     </div>
-    <div class="row">
-        <div id="num-picked" class="col-m-6 bg-dark"></div>
-        <div class="col-m-6 bg-dark">
-            <div id="wins"></div>
-            <div id="losses"></div>
+    <br>
+    <br>
+    <div class="container">
+        <div class="row">
+
+            <div class="col-md-8 text-dark text-center">
+                <div id="target-number">57
+                </div>
+            </div>
+            <br>
+            <br>
+            <div class="col-md-4 bg-dark text-center text-light">
+                <div id="wins">wins 0
+                </div>
+                <div id="losses">wins 0</div>
+            </div>
         </div>
     </div>
-    <div class="row">
-        <div id="crys-1" class="col-m-3"></div>
-        <div id="crys-2" class="col-m-3"></div>
-        <div id="crys-3" class="col-m-3"></div>
-        <div id="crys-4" class="col-m-3"></div>
-    </div>
+    <br>
+    <br>
+    <section class="container">
+
+        <div class="row">
+            <div class="col-md-8 text-center">
+                <div class="row">
+                    <div id="crys-1" class="col-md-3"><img src="http://cdn.playbuzz.com/cdn/35910209-2844-45c0-b099-f4d82878d54f/00261fda-4062-4096-81fd-8cf96b9034e8.jpg" style="width:150px" alt="gem">C1</div>
+                    <div id="crys-2" class="col-md-3"><img src="http://cdn.playbuzz.com/cdn/35910209-2844-45c0-b099-f4d82878d54f/00261fda-4062-4096-81fd-8cf96b9034e8.jpg" style="width:150px" alt="gem">C2</div>
+                    <div id="crys-3" class="col-md-3"><img src="http://cdn.playbuzz.com/cdn/35910209-2844-45c0-b099-f4d82878d54f/00261fda-4062-4096-81fd-8cf96b9034e8.jpg" style="width:150px" alt="gem">C3</div>
+                    <div id="crys-4" class="col-md-3"><img src="http://cdn.playbuzz.com/cdn/35910209-2844-45c0-b099-f4d82878d54f/00261fda-4062-4096-81fd-8cf96b9034e8.jpg" style="width:150px" alt="gem">C4</div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="text-center text-light bg-dark" id="num-picked">75</div>
+            </div>
+        </div>
+
+    </section>
 
 
 
