--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
         <div class="row align-items-center">
             <div class="col-md-8 text-center">
                 <div class="row">
-                    <div id="crys-1" class="col-md-3"><img src="assets/pics/blue-gem.png" style="width:150px" alt="gem">C1</div>
-                    <div id="crys-2" class="col-md-3"><img src="assets/pics/red-gem.png" style="width:150px" alt="gem">C2</div>
-                    <div id="crys-3" class="col-md-3"><img src="assets/pics/yel-gem.png" style="width:150px" alt="gem">C3</div>
-                    <div id="crys-4" class="col-md-3"><img src="assets/pics/green-gem.png" style="width:150px" alt="gem">C4</div>
+                    <div id="crys" class="col-md-12"></div>
+                    <div id="crys" class="col-md-12"></div>
+                    <div id="crys" class="col-md-12"></div>
+                    <div id="crys" class="col-md-12"></div>
                 </div>
             </div>
             <div class="col-md-4">
                 
                 <div class="text-center text-light bg-dark number-picked">Your Number<br>
-                    <div id="num-picked">75</div>
+                    <div id="num-picked"></div>
                 </div>
             </div>
         </div>
