--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
         <div class="row align-items-center">
             <div class="col-md-8 text-center">
                 <div class="row">
-                    <div id="crys" class="col-md-12"></div>
-                    <div id="crys" class="col-md-12"></div>
-                    <div id="crys" class="col-md-12"></div>
-                    <div id="crys" class="col-md-12"></div>
+                    <div id="crys" class="col-md-3"></div>
+                    <div id="crys-1" class="col-md-3"></div>
+                    <div id="crys-2" class="col-md-3"></div>
+                    <div id="crys-3" class="col-md-3"></div>
                 </div>
             </div>
             <div class="col-md-4">
