--- a/index.html
+++ b/index.html
@@ -72,13 +72,20 @@
         <div class="row align-items-center">
             <div class="col-md-8 text-center">
                 <div class="row">
-                    <div id="crys" class="col-md-12"></div>
+                    <div id="crys" class="col-md-12">
+                            <!-- <img class="crystals" src="assets/pics/blue-gem.png" alt="Blue">
+                            <img class="crystals" src="assets/pics/green-gem.png" alt="Green">
+                            <img class="crystals" src="assets/pics/red-gem.png" alt="Red">
+                            <img class="crystals" src="assets/pics/yel-gem.png" alt="Yellow"> -->
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
                 
                 <div class="text-center text-light bg-dark number-picked">Your Number<br>
-                    <div id="num-picked"></div>
+                    <div id="num-picked">
+
+                    </div>
                 </div>
             </div>
         </div>
