--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    
+
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Permanent+Marker" rel="stylesheet">
 </head>
@@ -20,35 +20,41 @@
     </header>
     <br>
     <br>
-    <div class="row">
-        <ul class="container bg-dark ul">
-            <li>
-                <p class="text-center font-weight-bold text-light">You will be given a random number at the start of
-                    the
-                    game
+    <section class="container">
+        <div class="row">
+            <ul class="ul">
+                <li>
+                    <p class="text-center font-weight-bold text-dark">You will be given a random number at the start
+                        of
+                        the
+                        game
 
-                </p>
-            </li>
-            <li>
-                <p class="text-center font-weight-bold text-light">There are 4 Crystals below. By clicking on a Crystal
-                    you
-                    will
-                    add a specific amount of points to your total score!
-                </p>
-            </li>
-            <li>
-                <p class="text-center font-weight-bold text-light">The value of each Crystal is hidden from you until
-                    you click on it.
-                </p>
-            </li>
-            <li>
-                <p class="text-center font-weight-bold text-light">The value of the Crystal will change with each new
-                    game.
+                    </p>
+                </li>
+                <li>
+                    <p class="text-center font-weight-bold text-dark">There are 4 Crystals below. By clicking on a
+                        Crystal
+                        you
+                        will
+                        add a specific amount of points to your total score!
+                    </p>
+                </li>
+                <li>
+                    <p class="text-center font-weight-bold text-dark">The value of each Crystal is hidden from you
+                        until
+                        you click on it.
+                    </p>
+                </li>
+                <li>
+                    <p class="text-center font-weight-bold text-dark">The value of the Crystal will change with each
+                        new
+                        game.
 
-                </p>
-            </li>
-        </ul>
-    </div>
+                    </p>
+                </li>
+            </ul>
+        </div>
+    </section>
     <br>
     <br>
     <div class="container">
@@ -77,7 +83,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                
+
                 <div class="text-center text-light bg-dark number-picked">Your Number<br>
                     <div id="num-picked">
 
